Fix white space di sebelah kanan

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*Jumbotron*/
 .jumbotron {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3)), url(../img/2.jpg);
